[workspace]
resolver = "2"
members = [
    "temporal_rs"
]

[workspace.package]
edition = "2021"
version = "0.0.4"
rust-version = "1.80"
authors = ["boa-dev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/boa-dev/temporal"

[workspace.dependencies]
tinystr = "0.7.6"
icu_calendar = { version = "1.5.2", default-features = false}
rustc-hash = "2.0.0"
bitflags = "2.6.0"
num-traits = "0.2.19"
ixdtf = "0.2.0"
iana-time-zone = "0.1.61"
log = "0.4.0"
tzif = "0.2.3"
jiff-tzdb = "0.1.1"
combine = "4.6.7"
web-time = "1.1.0"
