[package]
name = "bakeddata"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
publish = false

[dependencies]
databake = "0.2.0"
serde_json = "1.0.140"
temporal_provider = { workspace = true }
