[package]
name = "temporal_provider"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]

# Provider dependency
zerotrie = { version = "0.2.1", features = ["serde", "databake"] }
zerovec = { version = "0.11.1", features = ["serde", "databake", "derive"] }

# IANA dependency
zoneinfo_rs = { workspace = true, features = ["std"] }

# Databake dependencies
serde = { version = "1.0.219", features = ["derive"] }
databake = { version = "0.2.0", features = ["derive"] }
yoke = { version = "0.8.0", features = ["derive"] }
serde_json = "1.0.140"

