[package]
name = "timezone_provider"
description = "Time zone data providers"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-Apache",
    "LICENSE-MIT",
    "README.md"
]

[dependencies]

# Provider dependency
zerotrie = { version = "0.2.2", features = ["serde", "databake"] }
zerovec = { version = "0.11.2", features = ["serde", "databake"] }

# IANA dependency
parse-zoneinfo = "0.3.1"

# File System TZDB support
tzif = { workspace = true, optional = true }
combine = { workspace = true, optional = true }

# Databake dependencies
serde = { version = "1.0.219", features = ["derive"] }
databake = { version = "0.2.0", features = ["derive"] }
yoke = { version = "0.8.0", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["file_system_provider"]
file_system_provider = ["std", "dep:combine", "dep:tzif", "std"]
std = []
