[package]
name = "timezone_provider"
description = "Time zone data providers"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-Apache",
    "LICENSE-MIT",
    "README.md"
]

[features]
default = []
datagen = ["std", "dep:parse-zoneinfo", "dep:serde", "dep:databake",
           "dep:yoke", "dep:serde_json",
           "zerotrie/serde", "zerotrie/databake", "zerovec/serde", "zerovec/databake"]
zoneinfo64-provider = ["dep:serde", "zerovec/serde", "zerovec/derive", "zerovec/databake", "writeable", "resb", "rustc-hash"]
std = []


[dependencies]

# Provider dependency
zerotrie = "0.2.2"
zerovec = "0.11.2"
zerofrom = "0.1.6"

# IANA dependency
parse-zoneinfo = {version = "0.3.1", optional = true }

# Databake dependencies
serde = { version = "1.0.219", features = ["derive"], optional = true }
databake = { version = "0.2.0", features = ["derive"], optional = true }
yoke = { version = "0.8.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }

# ZoneInfo64 dependencies
resb = { git = "https://github.com/unicode-org/icu4x.git", optional = true }
rustc-hash = { workspace = true, optional = true }
writeable = { workspace = true, optional = true }