[package]
name = "temporal_capi"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]
diplomat = "0.9.0"
diplomat-runtime = "0.9.0"
temporal_rs = { version = "0.0.4", path = ".." }
