[package]
name = "temporal_rs"
keywords = ["date", "time", "calendar", "timezone", "duration"]
categories = ["date-and-time", "internationalization"]
description = "Temporal in Rust is an implementation of the TC39 Temporal Builtin Proposal in Rust."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tinystr.workspace = true
icu_calendar = { workspace = true, features = ["compiled_data"] }
rustc-hash = { workspace = true, features = ["std"] }
bitflags.workspace = true
num-traits.workspace = true
ixdtf = { workspace = true, features = ["duration"]}
iana-time-zone.workspace = true

# log feature
log = { workspace = true, optional = true }

# tzdb feature
tzif = { workspace = true, optional = true }
jiff-tzdb = { workspace = true, optional = true }
combine = { workspace = true, optional = true }

# System time feature
web-time = { workspace = true, optional =  true }

[features]
log = ["dep:log"]
experimental = ["tzdb"]
now = ["std", "dep:web-time"]
tzdb = ["dep:tzif", "std", "dep:jiff-tzdb", "dep:combine"]
std = []
