[package]
name = "zoneinfo_rs"
description = "Zoneinfo parser and compiler"
edition.workspace = true
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENSE-Apache",
    "LICENSE-MIT",
    "README.md",
]

[features]
std = []
unstable = []

[dependencies]
hashbrown = "0.16.0"
indexmap = "2.11.4"

[dev-dependencies]
tzif = { workspace = true }
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
