[package]
name = "bakeddata"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
publish = false

[dependencies]
databake.workspace = true
prettyplease = "0.2.37"
serde_json = "1.0.148"
syn = "2.0.111"
timezone_provider = { workspace = true, features = ["datagen"] }
rustc-hash.workspace = true
zerovec.workspace = true
